--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,8 @@
 
   <!-- Dependencies which this package needs to build itself. -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>sbpl</build_depend>
-  <run_depend>sbpl</run_depend>
+  <build_depend>sbpl_perch</build_depend>
+  <run_depend>sbpl_perch</run_depend>
 
   <!-- Dependencies needed to compile this package. -->
 
